fixes to icon alignment

--- a/less/framework/modules/events.less
+++ b/less/framework/modules/events.less
@@ -155,10 +155,11 @@
 		}
 	}
 }
-
-.events-approval {
-	table td i {
-		margin-left: 5px;
+@media (min-width: 43.0625em) {
+	.events-approval {
+		table td i {
+			margin-left: 5px;
+		}
 	}
 }
 
